# doubt

./: .gitignore  README.html  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: ci.yml
src/doubt/: __init__.py  doubt.py
tests/: test_assert_helper.py  test_basics.py  test_collections.py  test_impact.py  test_invariants.py  test_numpy.py  test_pandas.py
