[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doubt"
version = "0.1.0"
description = "Discover hidden assumptions about data completeness in your Python functions."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Aalekh Roy", email = "roy.aalekh@gmail.com" }
]
keywords = ["missing-data", "robustness", "debugging", "data-science", "analysis"]
requires-python = ">=3.8"

dependencies = [
    "numpy>=1.22",
    "pandas>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/yourusername/doubt"
Repository = "https://github.com/yourusername/doubt"
Issues = "https://github.com/yourusername/doubt/issues"


# ---------------------------
# setuptools configuration (FIXED)
# ---------------------------
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"doubt" = ["py.typed"]


# ---------------------------
# Pytest configuration
# ---------------------------
[tool.pytest.ini_options]
addopts = "-ra --showlocals --strict-markers --disable-warnings"
testpaths = ["tests"]


# ---------------------------
# Ruff
# ---------------------------
[tool.ruff]
line-length = 100
extend-select = ["I"]
target-version = "py38"
